# New

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yaml
docs/source/: index.md
newproject/: __init__.py
