[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "newproject"
version = "0.0.1"
description = "A example project"
authors = [
  { name = "depeiwang", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["newproject"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
